# SparCraft

./: .gitignore  CMakeLists.txt  LINUX_HOW_TO_COMPILE.txt  Makefile  build_linux.sh  build_win.bat  generate_vs.bat  install_sfml3.sh  lastbuild.txt  readme.md  stderr_trace2.txt
.claude/: settings.json
VisualStudio/: SFMLGame.vcxproj.filters  SparCraft.vcxproj  SparCraft_main.vcxproj  SparCraft_main.vcxproj.filters  bwapidata.vcxproj  bwapidata.vcxproj.filters  set_environment_variables.bat
sample_experiment/: sample_exp_linux.txt
source/gui/: GUI.cpp  GUI.h  GUIGame.cpp  GUITools.cpp  GUITools.h
src/: Action.cpp  Action.h  AllPlayers.cpp  AllPlayers.h  AlphaBetaMove.cpp  AlphaBetaMove.h  AlphaBetaSearch.cpp  AlphaBetaSearch.h  AlphaBetaSearchParameters.hpp  AlphaBetaSearchResults.hpp  AnimationFrameData.cpp  Array.hpp  BaseTypes.hpp  Common.cpp  Common.h  ConfigFileGenerator.h  EnumData.h  Game.cpp  Game.h  GameState.cpp  GameState.h  Hash.cpp  Hash.h  Logger.hpp  Map.hpp  MoveArray.cpp  MoveArray.h  MoveArray.hpp  MoveSet.hpp  Player.cpp  Player.h  PlayerProperties.cpp  PlayerProperties.h  Player_AlphaBeta.cpp  Player_AlphaBeta.h  Player_AttackClosest.cpp  Player_AttackClosest.h  Player_AttackDPS.cpp  Player_AttackDPS.h  Player_AttackWeakest.cpp  (+45 more)
src/bwapidata/include/Util/: FileLogger.cpp  Foreach.h  Strings.cpp
src/gui/: GUI.cpp  GUI.h  GUIGame.cpp  GUIGame.h
src/main/: SearchExperiment.cpp  SearchExperiment.h  main.cpp
src/test/: main_test.cpp
temp/: A2_MARKS.txt  Makefile  README.txt
temp/src/: Components.hpp  Entity.hpp  EntityManager.hpp  Game.cpp  Game.h  Vec2.hpp
temp/src_solution/: Components.hpp  EntityManager.hpp  Game.cpp  Game.h  Vec2.hpp
temp/visualstudio/: SFMLGame.vcxproj
vs/: SparCraft.sln  SparCraft.vcxproj  SparCraft.vcxproj.filters  SparCraft_main.vcxproj  SparCraft_main.vcxproj.filters  SparCraft_tests.vcxproj  bwapidata.vcxproj  bwapidata.vcxproj.filters
